# fastapi_supabase_template

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  mkdocs.yml  poetry_scripts.py  pyproject.toml  scripts.py
.github/workflows/: ci.yml  docker-image.yml  docs.yml  latest_changes.yml  main.yml
app/: main.py
app/api/api_v1/: api.py
app/core/: config.py
app/crud/: base.py
app/schemas/: base.py  item.py
docs/: README.md
scripts/: bump.sh  format.sh  lint.sh  test.sh
src/: __init__.py  main.py
src/api/: deps.py
src/api/api_v1/: __init__.py  api.py
src/api/api_v1/endpoints/: auth.py  items.py
src/app/: __init__.py  main.py
src/app/api/: deps.py  main.py
src/app/api/api_v1/endpoints/: items.py
src/app/core/: __init__.py  config.py  db.py  events.py
src/app/crud/: __init__.py  base.py  crud_item.py
src/app/models/: __init__.py  item.py  user.py
src/app/schemas/: __init__.py  auth.py  base.py  item.py
src/core/: config.py  events.py  supabase_client.py
src/crud/: __init__.py  base.py  crud_item.py  crud_user.py
src/fastapi_app/: app.py  model.py
src/fastapi_app/data_base/: __init__.py  client.py
src/fastapi_app/dependencies/: decorator.py
src/schemas/: __init__.py  auth.py  item.py  msg.py  user.py
supabase/: config.toml
tests/: .env  conftest.py  utils.py
tests/api/api_v1/: test_items.py
tests/crud/: test_item.py
tests/pre_start/: test_db.py  test_main.py
