[tool.poetry]
name = "fastapi_supabase_template"
version = "0.3.1"
description = ""
authors = ["Atticuszz <1831768457@qq.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = {extras = ["full"], version = "^0.111.1"}
python-dotenv = "^1.0.1"
uvicorn = "^0.30.4"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
supabase-py-async = "*"


[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
pytest = "^8.3.2"
faker = "^27.4.0"
python-semantic-release = "^9.8.5"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
anyio = "^4.4.0"




[tool.poetry.scripts]
tests = 'poetry_scripts:run_tests'

[tool.semantic_release]
version_variable = "pyproject.toml:tool.poetry.version"
branch = "main"
upload_to_PyPI = false  # 禁用上传到 PyPI
upload_to_release = true  # 启用上传到 GitHub Releases
build_command = "pip install poetry && poetry build"
commit_message = "chore(release): bump version to v{version}"
changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
