[project]
name = "fastapi_supabase_template"
version = "0.3.1"
description = ""
authors = [
    {name = "Atticuszz", email = "1831768457@qq.com"},
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi[full]>=0.111.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.30.6",
    "pydantic[email]>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "supabase>=2.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest-dotenv>=0.5.2",
    "pytest>=8.3.2",
    "faker>=28.0.0",
    "python-semantic-release>=9.8.5",
    "pre-commit>=3.8.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.semantic_release]
version_variable = "pyproject.toml:project.version"
branch = "main"
upload_to_PyPI = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): bump version to v{version}"
changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url"
